<resources>
    <string name="app_name">kinolist</string>
    <string name="watching_tab">WATCHING</string>
    <string name="to_watch_tab">TO WATCH</string>
    <string name="completed_tab">COMPLETED</string>
    <string name="add_entry_title">Add entry</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="genres">Genres</string>
    <string name="choose_genres">Choose genres…</string>
    <string name="status">Status</string>
    <string name="progress">Progress</string>
    <string name="stopped">Stopped at</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="finish">Finish</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_item_detail">ItemDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_item_list">ItemList</string>
    <string name="title_activity_add_entry">AddEntryActivity</string>
    <string name="choose_status">Choose status…</string>
    <string name="update">Update</string>


</resources>