<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ItemDetailFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:layout_editor_absoluteY="79dp">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/font_fade"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/font_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/year"
        android:textColor="@color/font_fade"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/add_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/font_primary"
        android:inputType="number"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/genresTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/genres"
        android:textColor="@color/font_fade"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/add_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingLeft="2dp"
        android:ems="10"
        android:text="@string/choose_genres"
        android:textColor="@color/font_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/status"
        android:textColor="@color/font_fade"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/add_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingLeft="2dp"
        android:ems="10"
        android:text="@string/choose_status"
        android:textColor="@color/font_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/progressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/progress"
        android:textColor="@color/font_primary"
        android:textSize="16sp" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stopTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopped"
                android:textColor="@color/font_fade"
                android:layout_weight="1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/episodeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/episode"
                android:textColor="@color/font_fade"
                android:layout_weight="1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/seasonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textColor="@color/font_fade"
                android:layout_weight="1"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/add_stop_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="time"
                android:textColor="@color/font_primary"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="100"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/episode_decr_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background"
                    android:layout_weight="70"
                    android:text="-" />

                <TextView
                    android:id="@+id/current_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1" />

                <Button
                    android:id="@+id/episode_incr_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background"
                    android:layout_weight="70"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="100"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/season_decr_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background"

                    android:layout_weight="70"
                    android:text="-" />

                <TextView
                    android:id="@+id/current_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background"
                    android:layout_weight="1"
                    android:text="1" />

                <Button
                    android:id="@+id/season_incr_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background"
                    android:layout_weight="70"
                    android:text="+" />

            </LinearLayout>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/add"
        android:text="@string/update"
        android:textAlignment="viewStart"
        android:textColor="@color/font_primary"
        android:textColorHint="@color/background"
        android:textSize="20sp"
        app:backgroundTint="@color/background"
        app:icon="@android:drawable/ic_menu_save"
        app:iconTint="@color/font_primary" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>